<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ru.malevichrp.studentsOnLectures.views.text.TextCustomView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        tools:text="Name" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.malevichrp.studentsOnLectures.views.text.TextCustomView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="16dp"
            android:textSize="16sp"
            tools:text="Group name" />

        <ru.malevichrp.studentsOnLectures.views.text.TextCustomView
            android:id="@+id/sessionTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:textSize="16sp"
            tools:text="Session timestamp" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ru.malevichrp.studentsOnLectures.views.text.TextCustomView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        tools:text="Session status" />

    <ru.malevichrp.studentsOnLectures.views.progress.ProgressCustomView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ru.malevichrp.studentsOnLectures.views.button.ButtonCustomView
        android:id="@+id/startSessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/start_session" />

    <ru.malevichrp.studentsOnLectures.views.button.ButtonCustomView
        android:id="@+id/stopSessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/stop_session" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/back" />
</LinearLayout>